fix: #44 Alignment of breadcrumb arrows

--- a/src/css-components/breadcrumb/breadcrumb.ios.styl
+++ b/src/css-components/breadcrumb/breadcrumb.ios.styl
@@ -60,10 +60,9 @@ ul.breadcrumb
         content ''
         position absolute
         top 0
+        bottom 0
         border 0 solid $breadcrumb-primary
         border-width ($breadcrumb-height / 2) 10px
-        width 0
-        height 0
 
       &:before
         left (- $breadcrumb-separator)
